--- a/mie/doc/simul.bib
+++ b/mie/doc/simul.bib
@@ -3088,7 +3088,7 @@
 }
 
 
-@article{Goethe2017,
+@article{goethe2017,
   author = {Martin Goethe and Ignacio Fita and J. Miguel Rubi},
   title = {Testing the mutual information expansion of entropy with multivariate Gaussian distributions},
   journal = {The Journal of Chemical Physics},
